test/var_type.jk
// This is a test file for variable types in Rust.

/*
fn main() {
    var a: i32 = 10;
    var b: f64 = 3.14;
    print a;
    print b;

    var c: bool = true;
    print c;

    var d: str = "Hello, world!";
    print d;

    var e = null;
    print e;

    var f: Fn = |x| x + 1;
    print f(10);

    // class create default type
    class A {}
    // class B {}
    var g: A = A;       // success
    // var h: A = B;    // error: expected type `class(A)`, found type `class(B)`
    print g;

    // var i: fn(i32,i32) -> i32 = |a: i32, b: i32| -> i32 { a + b };
    // print i(1, 2);

    class Point {
        var x: i32;
        var y: i32;
    }

    var j: Point = Point();
    print j;

    j.x = 10;
    j.y = 20;
    print j;
}

main();

    // fn closure
    fn counter(name: str, n: i32) -> i32 {
        print name;
        return n + 1;
    }
    
// TODO: var type check. and fn type check. base type create instance and class create instance.
    var a: i32 = 10;
    var b: f64 = 3.14;
    var c: bool = true;
    var d: str = "Hello, world!";
    var e = null;
    var f: Fn(i32) -> i32 = |x: i32| -> i32 { 
        return x + 1;
    };

    fn counter(name: str, n: i32) -> i32 {
        print f(n);
        return n + 1;
    }

    var g: Fn(str, i32) -> i32 = counter;
    print g("Hello, world!", 10);

    var h: i32 = counter("Hello, world!", 10);
    print h;
    print f(10);

    fn local_fn() -> i32 {
        var i: i32 = 10;
        var f: Fn(i32) -> i32 = |x: i32| -> i32 {
            return x + i;
        };
        print f(20);
    }

    local_fn();

    fn used_trinomial(condition: bool) -> bool {
        // return condition ? true : 1;  // error:  Type mismatch in binary expression, left type 'bool' and right type 'i32'.
        return condition ? true : false;
    }
    var i: bool = used_trinomial(true);
    print i;

// TODO: class create and instance. handler class method and functions call. class parameter and return type.
    class Point {
        var inner_x: i32 = 10000;
        var x: i32;
        var y: i32;

        fn init(this, x: i32, y: i32) {
            this.x = x;
            this.y = y;
        }
        fn get_x(this) -> i32 {
            return this.x;
        }
        fn add_into(a: i32, b: i32) -> i32 {
            return a + b;
        }
    }

    // create class instance default call init method.
    var j: Point = Point(1000, 2000);
    print j.x;
    print j.y;

    print "get x value";
    var j_get_x: Fn(Point) -> i32 = Point.get_x;
    
    print "add into value";
    print j.add_into(10, 20);

    // setter class parameter.
    j.x = 10;
    j.y = 20;

    // getter class parameter.
    print j.x;
    print j.y;

    // show class instance.
    print j;

    // class getter class parameter.
    print Point.inner_x;

    // class function call.
    var j_add_into: Fn(i32, i32) -> i32 = Point.add_into;
    print j_add_into(10, 20);

// TODO: class inheritance. handler class super keyword resolve static check and call method.
    class Point {
        var x: i32;
        var y: i32;
        fn init(this, x: i32, y: i32) {
            this.x = x;
            this.y = y;
        }
        fn aux_display(p: Point) -> None { 
            print p.x; 
        }
    }

    class Circle: Point {
        var radius: f64;
        fn init(this, x: i32, y: i32, radius: f64) {
            super.init(x, y);
            this.radius = radius;
        }
        fn area(this) -> f64 {
            return 3.1415926 * this.radius * this.radius;
        }
    }

    var p: Point = Point(10, 20);
    var c: Circle = Circle(10, 20, 3.0);

    print p;
    print "aux_display:";
    // p.aux_display(p);
    
    print "Circle:";
    print c;
    print c.area();

// TODO: handler class this.p = this.p ... question: how to handle this.p in class method.
    class Point {
        var x: i32;
        var y: i32;
        fn init(this, x: i32, y: i32) {
            this.x = x;
            this.y = y;
        }
    }

    fn move_point(p: Point, dx: i32, dy: i32) -> None {
        // setter(getter, getter + dx)
        p.x = p.x + dx; 
        p.y = p.y + dy;
    }

    var p1: Point = Point(10, 20);
    move_point(p1, 100, 200);
    print p1;

// impl class variable type check.
    var p: Point = Point(10, 20);
    var c: Circle = Circle(100, 200, 3.0);
    var cs: CirSc = CirSc(1000, 2000, 4.0, "red");
    
    // p.move(100, 200);
    // print p;
    c.aux_display(c);
    cs.aux_display(cs);

    print "p move:";
    var rp: null = move_point(p, 100, 200);
    if (rp == null) {
        print "move_point return null";
    } else {
        print "move_point return not null";
    }

    var p1: Point = Point(10, 20);
    // p.x = "hello, world!";    // error: expected type 'i32', found 'str'
    // print p.x;                // add: setter(getter, value) type check.

    // TODO: will static resolve type info store to runtime ?
    p1.new_var = "hello, world!";
    print p1.new_var;

    // TODO: will add instance variable type check. error: expected type 'i32', found 'str'
    p1.new_var = 100;
    print p1.new_var;

    // var a: i32 = 10;        // variable statement type check.
    // a = "hello, world!";    // add: assign type check. -> handler {resolve::assign add type check}.
    // print a;

    // var instance_var: i32 = p.instance_var;
    // print instance_var;
    // var p1: Point = Point.init(10, 20);      // error: 'this' ? 

*/

class Point {
    var x: i32;
    var y: i32;
    // TODO: class init static resolve check.
    fn init(this, x: i32, y: i32) {
        this.x = x;
        this.y = y;
    
        // TODO: instance variable what check type?
        // setter(getter, value), so in setter check type.
        
        /* success: class initializer inner variable type check.
        this.instance_var = 100;
        this.instance_var = "hello, world!";
        */

    }
    fn move(this, dx: i32, dy: i32) {
        this.x = this.x + dx;
        this.y = this.y + dy;

        // can used this.x and this.y in class method.
        // print this.x;
        // print this.y;
    }
    fn aux_display(point: Point) -> None {
        print point.x;
        print point.y;
    }
}

class Circle: Point {
    var radius: f64;
    fn init(this, x: i32, y: i32, radius: f64) -> This {
        super.init(x, y);
        this.radius = radius;
    }
    fn area(this) -> f64 {
        return 3.1415926 * this.radius * this.radius;
    }
}

class CirSc: Circle {
    var color: str;
    fn init(this, x: i32, y: i32, radius: f64, color: str) -> CirSc {
        super.init(x, y, radius);
        this.color = color;
    }
}

fn move_point(p: Point, dx: i32, dy: i32) -> null {
    p.move(dx, dy);

    // null is empty value, it's value type.
    // TODO: what check function inner return value type?
    // return statement visit outside function declare return type.
    return null;
}


fn main() {
    var p: Point = Point(10, 20);
    var c: Circle = Circle(100, 200, 3.0);
    var cs: CirSc = CirSc(1000, 2000, 4.0, "red");

    /*
    p.instance_var = 100;               // static check: setter type check.
    p.instance_var = "hello, world!";   // success: setter type check.
    // msg: Setter type mismatch: Expected type 'i32', Found type 'str'. 
    */

    // instance add new variable.
    print p;
    

    // TODO: instance add new variable.
    // dynamic add new variable.
    // add to fields
    p.new_var = "hello, world!";
    print p;
    
    // add to methods
    // TODO: lambda function => methods
    p.new_method = |x: i32, y: i32| -> i32 {
        return x + y;
    };
    print p;

    print p.new_method(10, 20);

    // add function => methods.
    fn add(a: i32, b: i32) -> i32 {
        return a + b;
    }
    p.add = add;
    print p;

    print p.add(10, 20);
}

main();
